@@ -1,3 +1,12 @@
+2014-08-29 Riccardo Mottola <rm@gnu.org>
+
+	* Modules/Editors/ProjectCenter/GNUmakefile
+	* Modules/Editors/ProjectCenter/LineJumper.h
+	* Modules/Editors/ProjectCenter/LineJumper.m
+	* Modules/Editors/ProjectCenter/PCEditorView.m
+	* Modules/Editors/ProjectCenter/Resources/LineJumper.gorm
+	Implement and add a simple go-to-line panel
+
 2014-08-25  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Modules/Editors/ProjectCenter/PCEditor.m (unhighlightCharacter:):
